correct subtitle overflow pushing title

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -143,7 +143,7 @@
   }
 
   .profile__subtitle {
-    max-width: 282px;
+    max-width: 196px;
     font-family: "Inter", sans-serif;
     font-size: 14px;
     line-height: 1.2;
